[tool.poetry]
name = "idmc"
version = "0.1.0"
description = ""
authors = ["John Freeman <jfreeman08@gmail.com>"]
license = "ISC"

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
pandas = "^1.3.2"
altair = "^4.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
